@startuml US-21
hide circle
skinparam classAttributeIconSize 0
title US-21: Add to Cart
class User {
  +userId: UUID
  +email: string
  +username: string
  +passwordHash: string
  +role: Role
  +isBanned: bool
  +displayName: string
  +avatarUrl: string
}

class Game {
  +gameId: UUID
  +title: string
  +price: decimal
  +discountPercent: int
  +status: GameStatus
  +rejectionReason: string
}

class CartItem {
  +cartItemId: UUID
  +addedAt: datetime
}

User "1" --> "0..*" CartItem : has
CartItem "1" --> "1" Game : refers_to
@enduml
